[tool.poetry]
name = "carrier-owl"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wheel = "0.37.1"
slackweb = "^1.0.5"
lxml = "^4.6.3"
pyyaml = "^5.3.1"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
webdriver-manager = "^3.3.0"
arxiv = "^0.5.3"
python-dotenv = ">=0.18.0,<0.19.0"
notion-client = "^1.0.0"
python-notion = {git = "https://github.com/qlitre/python-notion.git"}
attrs = ">=21.2.0,<21.3.0"
requests = ">=2.26.0,<2.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
